--- a/src/scss/custom-input.scss
+++ b/src/scss/custom-input.scss
@@ -1,5 +1,10 @@
+.location-input{
+  width:224px;
+}
+.search-input{
+  width:372px;
+}
 .custom-input {
-  width: 100%;
   position: relative;
   .placeholder-label {
     position: absolute;
